fixed page layout bug on 960px

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -94,7 +94,7 @@ textarea,
   margin-top: 85px;
   padding: 0 10px;
 }
-@media (min-width: 961px) {
+@media (min-width: 960px) {
   .page-body {
     margin-right: 250px;
     padding: 0 20px;
